Add NBA:lidar layer (password protected)
