# src/server/openapi.yaml
@@ -434,6 +434,75 @@ paths:
             application/json:
               schema:
                 type: array              
+  /fha-wms:
+    get:
+      summary: Route for password protected WMS layers.
+      parameters:
+        - in: query
+          name: service
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: request
+          schema:
+            type: string
+          required: true 
+        - in: query
+          name: layers
+          schema:
+            type: string
+          required: true  
+        - in: query
+          name: styles
+          schema:
+            type: string
+          allowEmptyValue : true
+          required: true  
+        - in: query
+          name: format
+          schema:
+            type: string
+          required: true    
+        - in: query
+          name: transparent
+          schema:
+            type: boolean
+          required: true
+        - in: query
+          name: version
+          schema:
+            type: string
+          required: true   
+        - in: query
+          name: width
+          schema:
+            type: number
+          required: true
+        - in: query
+          name: height
+          schema:
+            type: number
+          required: true
+        - in: query
+          name: crs
+          schema:
+            type: string
+          required: true 
+        - in: query
+          name: bbox
+          schema:
+            type: string
+          allowReserved: true  
+          required: true       
+      responses:
+        '200':
+          description: Image
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary     
   /void/{perspectiveID}:
     get:
       summary: Retrieve a VoID description
